--- a/part2/public/walker-dashboard.html
+++ b/part2/public/walker-dashboard.html
@@ -9,7 +9,10 @@
 </head>
 <body class="bg-light">
   <div id="app" class="container py-4">
-    <h1 class="mb-4 text-success">Walker Dashboard</h1>
+    <div style="display: flex; justify-content: space-between;"> <!-- Keep the logout button on the same line with the header -->
+      <h1 class="mb-4 text-primary">Owner Dashboard</h1>
+      <button type="button" @click="logout" class="btn" style="border: 2px solid red; color: red;">Logout</button> <!-- Add logout button -->
+    </div>
 
     <!-- Alert messages -->
     <div v-if="message" class="alert alert-info">{{ message }}</div>
@@ -74,6 +77,27 @@
           }
         }
 
+        // Logout function similar to owner-dashboard
+        // handle by frontend as backend already destroy session
+        async function logout(){
+          try {
+            // Destroy session with logout API
+            const res = await fetch('/api/users/logout', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' }  // Json format
+            });
+
+            if (res.ok){
+              // Redirect to login page
+              window.location.href = '/';
+            } else {
+              error.value = 'Logout failed'; // Error message
+            }
+          } catch (err) {
+            error.value = 'Logout failed'; // Error message
+          }
+        }
+
         onMounted(() => {
           loadWalkRequests();
         });
@@ -82,7 +106,8 @@
           walks,
           message,
           error,
-          applyToWalk
+          applyToWalk,
+          logout
         };
       }
     }).mount('#app');
